y.output

state 0
	$accept: .chunk $end 
	chunk1: .    (4)

	.  reduce 4 (src line 101)

	chunk  goto 1
	chunk1  goto 2

state 1
	$accept:  chunk.$end 

	$end  accept
	.  error


state 2
	chunk:  chunk1.    (1)
	chunk:  chunk1.laststat 
	chunk:  chunk1.laststat TSemi 
	chunk1:  chunk1.stat 
	chunk1:  chunk1.TSemi 

	TBreak  shift 7
	TFor  shift 15
	TFunction  shift 16
	TIf  shift 14
	TLocal  shift 17
	TReturn  shift 6
	TRepeat  shift 13
	TWhile  shift 12
	TGoto  shift 19
	T2Colon  shift 18
	TIdent  shift 20
	TLBrace  shift 11
	TLParen  shift 24
	TSemi  shift 5
	.  reduce 1 (src line 81)

	stat  goto 4
	laststat  goto 3
	varlist  goto 9
	var  goto 8
	prefixexp  goto 10
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 22

state 3
	chunk:  chunk1 laststat.    (2)
	chunk:  chunk1 laststat.TSemi 

	TSemi  shift 25
	.  reduce 2 (src line 87)


state 4
	chunk1:  chunk1 stat.    (5)

	.  reduce 5 (src line 104)


state 5
	chunk1:  chunk1 TSemi.    (6)

	.  reduce 6 (src line 107)


state 6
	laststat:  TReturn.    (37)
	laststat:  TReturn.exprlist 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  reduce 37 (src line 267)

	var  goto 41
	exprlist  goto 26
	expr  goto 27
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 7
	laststat:  TBreak.    (39)

	.  reduce 39 (src line 275)


state 8
	stat:  var.TAddAssign expr 
	stat:  var.TSubAssign expr 
	stat:  var.TMulAssign expr 
	stat:  var.TDivAssign expr 
	stat:  var.TModAssign expr 
	stat:  var.TPowAssign expr 
	varlist:  var.    (44)
	prefixexp:  var.    (94)

	TComma  reduce 44 (src line 302)
	TAssign  reduce 44 (src line 302)
	TAddAssign  shift 44
	TSubAssign  shift 45
	TMulAssign  shift 46
	TDivAssign  shift 47
	TModAssign  shift 48
	TPowAssign  shift 49
	.  reduce 94 (src line 504)


state 9
	stat:  varlist.TAssign exprlist 
	varlist:  varlist.TComma var 

	TComma  shift 51
	TAssign  shift 50
	.  error


10: shift/reduce conflict (shift 56(0), red'n 15(0)) on TLParen
state 10
	stat:  prefixexp.    (15)
	var:  prefixexp.TLBracket expr TRBracket 
	var:  prefixexp.TDot TIdent 
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.TColon TIdent args 

	TDot  shift 53
	TLParen  shift 56
	TLBracket  shift 52
	TColon  shift 55
	.  reduce 15 (src line 145)

	args  goto 54

state 11
	stat:  TLBrace.block TRBrace 
	chunk1: .    (4)

	.  reduce 4 (src line 101)

	chunk  goto 58
	chunk1  goto 2
	block  goto 57

state 12
	stat:  TWhile.expr TLBrace block TRBrace 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 59
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 13
	stat:  TRepeat.TLBrace block TRBrace TUntil expr 

	TLBrace  shift 60
	.  error


state 14
	stat:  TIf.expr TLBrace block TRBrace 
	stat:  TIf.expr stat 
	stat:  TIf.expr TLBrace block TRBrace elseifs 
	stat:  TIf.expr TLBrace block TRBrace elseifs TElse TLBrace block TRBrace 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 61
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 15
	stat:  TFor.TIdent TAssign expr TComma expr TLBrace block TRBrace TIfThru TLBrace block TRBrace 
	stat:  TFor.TIdent TAssign expr TComma expr TLBrace block TRBrace 
	stat:  TFor.TIdent TAssign expr TComma expr TComma expr TLBrace block TRBrace TIfThru TLBrace block TRBrace 
	stat:  TFor.TIdent TAssign expr TComma expr TComma expr TLBrace block TRBrace 
	stat:  TFor.namelist TIn exprlist TLBrace block TRBrace TIfThru TLBrace block TRBrace 
	stat:  TFor.namelist TIn exprlist TLBrace block TRBrace 

	TIdent  shift 62
	.  error

	namelist  goto 63

state 16
	stat:  TFunction.funcname funcbody 
	function:  TFunction.funcbody 

	TIdent  shift 68
	TLParen  shift 67
	.  error

	funcname  goto 64
	funcname1  goto 66
	funcbody  goto 65

state 17
	stat:  TLocal.TFunction TIdent funcbody 
	stat:  TLocal.namelist TAssign exprlist 
	stat:  TLocal.namelist 

	TFunction  shift 69
	TIdent  shift 71
	.  error

	namelist  goto 70

state 18
	stat:  T2Colon.TIdent T2Colon 

	TIdent  shift 72
	.  error


state 19
	stat:  TGoto.TIdent 

	TIdent  shift 73
	.  error


state 20
	var:  TIdent.    (46)

	.  reduce 46 (src line 310)


state 21
	prefixexp:  afunctioncall.    (95)

	.  reduce 95 (src line 507)


state 22
	prefixexp:  function.    (96)

	.  reduce 96 (src line 510)


state 23
	prefixexp:  functioncall.    (97)

	.  reduce 97 (src line 513)


state 24
	prefixexp:  TLParen.expr TRParen 
	afunctioncall:  TLParen.functioncall TRParen 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 74
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 75
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 25
	chunk:  chunk1 laststat TSemi.    (3)

	.  reduce 3 (src line 93)


state 26
	laststat:  TReturn exprlist.    (38)
	exprlist:  exprlist.TComma expr 

	TComma  shift 76
	.  reduce 38 (src line 271)


state 27
	exprlist:  expr.    (51)
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.TBitOr expr 
	expr:  expr.TBitAnd expr 
	expr:  expr.TLeftShift expr 
	expr:  expr.TRightShift expr 
	expr:  expr.TGt expr 
	expr:  expr.TLt expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Dot expr 
	expr:  expr.TAdd expr 
	expr:  expr.TSub expr 
	expr:  expr.TMul expr 
	expr:  expr.TDiv expr 
	expr:  expr.TMod expr 
	expr:  expr.TPow expr 
	expr:  expr.TDotLParen type_expr TRParen 

	TAnd  shift 78
	TOr  shift 77
	TEqeq  shift 87
	TNeq  shift 88
	TLte  shift 86
	TGte  shift 85
	T2Dot  shift 89
	TAdd  shift 90
	TSub  shift 91
	TMul  shift 92
	TDiv  shift 93
	TMod  shift 94
	TPow  shift 95
	TLeftShift  shift 81
	TRightShift  shift 82
	TBitAnd  shift 80
	TBitOr  shift 79
	TDotLParen  shift 96
	TGt  shift 83
	TLt  shift 84
	.  reduce 51 (src line 334)


state 28
	expr:  TNil.    (61)

	.  reduce 61 (src line 369)


state 29
	expr:  TFalse.    (62)

	.  reduce 62 (src line 373)


state 30
	expr:  TTrue.    (63)

	.  reduce 63 (src line 377)


state 31
	expr:  TNumber.    (64)

	.  reduce 64 (src line 381)


state 32
	expr:  T3Dot.    (65)

	.  reduce 65 (src line 385)


 33: reduce/reduce conflict  (red'ns 66 and 96) on $end
 33: reduce/reduce conflict  (red'ns 66 and 96) on TAnd
 33: reduce/reduce conflict  (red'ns 66 and 96) on TBreak
 33: reduce/reduce conflict  (red'ns 66 and 96) on TFor
 33: reduce/reduce conflict  (red'ns 66 and 96) on TFunction
 33: reduce/reduce conflict  (red'ns 66 and 96) on TIf
 33: reduce/reduce conflict  (red'ns 66 and 96) on TLocal
 33: reduce/reduce conflict  (red'ns 66 and 96) on TOr
 33: reduce/reduce conflict  (red'ns 66 and 96) on TReturn
 33: reduce/reduce conflict  (red'ns 66 and 96) on TRepeat
 33: reduce/reduce conflict  (red'ns 66 and 96) on TWhile
 33: reduce/reduce conflict  (red'ns 66 and 96) on TGoto
 33: reduce/reduce conflict  (red'ns 66 and 96) on TEqeq
 33: reduce/reduce conflict  (red'ns 66 and 96) on TNeq
 33: reduce/reduce conflict  (red'ns 66 and 96) on TLte
 33: reduce/reduce conflict  (red'ns 66 and 96) on TGte
 33: reduce/reduce conflict  (red'ns 66 and 96) on T2Dot
 33: reduce/reduce conflict  (red'ns 66 and 96) on T2Colon
 33: reduce/reduce conflict  (red'ns 66 and 96) on TIdent
 33: reduce/reduce conflict  (red'ns 66 and 96) on TLBrace
 33: reduce/reduce conflict  (red'ns 66 and 96) on TRBrace
 33: reduce/reduce conflict  (red'ns 66 and 96) on TLParen
 33: reduce/reduce conflict  (red'ns 66 and 96) on TRParen
 33: reduce/reduce conflict  (red'ns 66 and 96) on TRBracket
 33: reduce/reduce conflict  (red'ns 66 and 96) on TComma
 33: reduce/reduce conflict  (red'ns 66 and 96) on TSemi
 33: reduce/reduce conflict  (red'ns 66 and 96) on TAdd
 33: reduce/reduce conflict  (red'ns 66 and 96) on TSub
 33: reduce/reduce conflict  (red'ns 66 and 96) on TMul
 33: reduce/reduce conflict  (red'ns 66 and 96) on TDiv
 33: reduce/reduce conflict  (red'ns 66 and 96) on TMod
 33: reduce/reduce conflict  (red'ns 66 and 96) on TPow
 33: reduce/reduce conflict  (red'ns 66 and 96) on TLeftShift
 33: reduce/reduce conflict  (red'ns 66 and 96) on TRightShift
 33: reduce/reduce conflict  (red'ns 66 and 96) on TBitAnd
 33: reduce/reduce conflict  (red'ns 66 and 96) on TBitOr
 33: reduce/reduce conflict  (red'ns 66 and 96) on TDotLParen
 33: reduce/reduce conflict  (red'ns 66 and 96) on TGt
 33: reduce/reduce conflict  (red'ns 66 and 96) on TLt
state 33
	expr:  function.    (66)
	prefixexp:  function.    (96)

	TDot  reduce 96 (src line 510)
	TLBracket  reduce 96 (src line 510)
	TColon  reduce 96 (src line 510)
	.  reduce 66 (src line 389)


34: shift/reduce conflict (shift 56(0), red'n 67(0)) on TLParen
state 34
	var:  prefixexp.TLBracket expr TRBracket 
	var:  prefixexp.TDot TIdent 
	expr:  prefixexp.    (67)
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.TColon TIdent args 

	TDot  shift 53
	TLParen  shift 56
	TLBracket  shift 52
	TColon  shift 55
	.  reduce 67 (src line 392)

	args  goto 54

state 35
	expr:  string.    (68)

	.  reduce 68 (src line 395)


state 36
	expr:  tableconstructor.    (69)

	.  reduce 69 (src line 398)


state 37
	expr:  TSub.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 97
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 38
	expr:  TNot.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 98
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 39
	expr:  THash.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 99
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 40
	function:  TFunction.funcbody 

	TLParen  shift 67
	.  error

	funcbody  goto 65

state 41
	prefixexp:  var.    (94)

	.  reduce 94 (src line 504)


state 42
	string:  TString.    (93)

	.  reduce 93 (src line 498)


state 43
	tableconstructor:  TLBrace.TRBrace 
	tableconstructor:  TLBrace.fieldlist TRBrace 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 103
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TRBrace  shift 100
	TLParen  shift 24
	TLBracket  shift 104
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 105
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36
	fieldlist  goto 101
	field  goto 102

state 44
	stat:  var TAddAssign.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 106
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 45
	stat:  var TSubAssign.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 107
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 46
	stat:  var TMulAssign.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 108
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 47
	stat:  var TDivAssign.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 109
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 48
	stat:  var TModAssign.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 110
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 49
	stat:  var TPowAssign.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 111
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 50
	stat:  varlist TAssign.exprlist 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	exprlist  goto 112
	expr  goto 27
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 51
	varlist:  varlist TComma.var 

	TFunction  shift 40
	TIdent  shift 20
	TLParen  shift 24
	.  error

	var  goto 113
	prefixexp  goto 114
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 22

state 52
	var:  prefixexp TLBracket.expr TRBracket 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 115
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 53
	var:  prefixexp TDot.TIdent 

	TIdent  shift 116
	.  error


state 54
	functioncall:  prefixexp args.    (100)

	.  reduce 100 (src line 531)


state 55
	functioncall:  prefixexp TColon.TIdent args 

	TIdent  shift 117
	.  error


state 56
	args:  TLParen.TRParen 
	args:  TLParen.exprlist TRParen 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TRParen  shift 118
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	exprlist  goto 119
	expr  goto 27
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 57
	stat:  TLBrace block.TRBrace 

	TRBrace  shift 120
	.  error


state 58
	block:  chunk.    (7)

	.  reduce 7 (src line 112)


state 59
	stat:  TWhile expr.TLBrace block TRBrace 
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.TBitOr expr 
	expr:  expr.TBitAnd expr 
	expr:  expr.TLeftShift expr 
	expr:  expr.TRightShift expr 
	expr:  expr.TGt expr 
	expr:  expr.TLt expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Dot expr 
	expr:  expr.TAdd expr 
	expr:  expr.TSub expr 
	expr:  expr.TMul expr 
	expr:  expr.TDiv expr 
	expr:  expr.TMod expr 
	expr:  expr.TPow expr 
	expr:  expr.TDotLParen type_expr TRParen 

	TAnd  shift 78
	TOr  shift 77
	TEqeq  shift 87
	TNeq  shift 88
	TLte  shift 86
	TGte  shift 85
	T2Dot  shift 89
	TLBrace  shift 121
	TAdd  shift 90
	TSub  shift 91
	TMul  shift 92
	TDiv  shift 93
	TMod  shift 94
	TPow  shift 95
	TLeftShift  shift 81
	TRightShift  shift 82
	TBitAnd  shift 80
	TBitOr  shift 79
	TDotLParen  shift 96
	TGt  shift 83
	TLt  shift 84
	.  error


state 60
	stat:  TRepeat TLBrace.block TRBrace TUntil expr 
	chunk1: .    (4)

	.  reduce 4 (src line 101)

	chunk  goto 58
	chunk1  goto 2
	block  goto 122

state 61
	stat:  TIf expr.TLBrace block TRBrace 
	stat:  TIf expr.stat 
	stat:  TIf expr.TLBrace block TRBrace elseifs 
	stat:  TIf expr.TLBrace block TRBrace elseifs TElse TLBrace block TRBrace 
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.TBitOr expr 
	expr:  expr.TBitAnd expr 
	expr:  expr.TLeftShift expr 
	expr:  expr.TRightShift expr 
	expr:  expr.TGt expr 
	expr:  expr.TLt expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Dot expr 
	expr:  expr.TAdd expr 
	expr:  expr.TSub expr 
	expr:  expr.TMul expr 
	expr:  expr.TDiv expr 
	expr:  expr.TMod expr 
	expr:  expr.TPow expr 
	expr:  expr.TDotLParen type_expr TRParen 

	TAnd  shift 78
	TFor  shift 15
	TFunction  shift 16
	TIf  shift 14
	TLocal  shift 17
	TOr  shift 77
	TRepeat  shift 13
	TWhile  shift 12
	TGoto  shift 19
	TEqeq  shift 87
	TNeq  shift 88
	TLte  shift 86
	TGte  shift 85
	T2Dot  shift 89
	T2Colon  shift 18
	TIdent  shift 20
	TLBrace  shift 123
	TLParen  shift 24
	TAdd  shift 90
	TSub  shift 91
	TMul  shift 92
	TDiv  shift 93
	TMod  shift 94
	TPow  shift 95
	TLeftShift  shift 81
	TRightShift  shift 82
	TBitAnd  shift 80
	TBitOr  shift 79
	TDotLParen  shift 96
	TGt  shift 83
	TLt  shift 84
	.  error

	stat  goto 124
	varlist  goto 9
	var  goto 8
	prefixexp  goto 10
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 22

state 62
	stat:  TFor TIdent.TAssign expr TComma expr TLBrace block TRBrace TIfThru TLBrace block TRBrace 
	stat:  TFor TIdent.TAssign expr TComma expr TLBrace block TRBrace 
	stat:  TFor TIdent.TAssign expr TComma expr TComma expr TLBrace block TRBrace TIfThru TLBrace block TRBrace 
	stat:  TFor TIdent.TAssign expr TComma expr TComma expr TLBrace block TRBrace 
	namelist:  TIdent.    (49)

	TAssign  shift 125
	.  reduce 49 (src line 326)


state 63
	stat:  TFor namelist.TIn exprlist TLBrace block TRBrace TIfThru TLBrace block TRBrace 
	stat:  TFor namelist.TIn exprlist TLBrace block TRBrace 
	namelist:  namelist.TComma TIdent 

	TIn  shift 126
	TComma  shift 127
	.  error


state 64
	stat:  TFunction funcname.funcbody 

	TLParen  shift 67
	.  error

	funcbody  goto 128

state 65
	function:  TFunction funcbody.    (104)

	.  reduce 104 (src line 555)


state 66
	funcname:  funcname1.    (40)
	funcname:  funcname1.TColon TIdent 
	funcname1:  funcname1.TDot TIdent 

	TDot  shift 130
	TColon  shift 129
	.  reduce 40 (src line 281)


state 67
	funcbody:  TLParen.parlist TRParen TLBrace block TRBrace 
	funcbody:  TLParen.TRParen TLBrace block TRBrace 

	T3Dot  shift 133
	TIdent  shift 71
	TRParen  shift 132
	.  error

	namelist  goto 134
	parlist  goto 131

state 68
	funcname1:  TIdent.    (42)

	.  reduce 42 (src line 289)


state 69
	stat:  TLocal TFunction.TIdent funcbody 

	TIdent  shift 135
	.  error


state 70
	stat:  TLocal namelist.TAssign exprlist 
	stat:  TLocal namelist.    (32)
	namelist:  namelist.TComma TIdent 

	TComma  shift 127
	TAssign  shift 136
	.  reduce 32 (src line 244)


state 71
	namelist:  TIdent.    (49)

	.  reduce 49 (src line 326)


state 72
	stat:  T2Colon TIdent.T2Colon 

	T2Colon  shift 137
	.  error


state 73
	stat:  TGoto TIdent.    (34)

	.  reduce 34 (src line 252)


state 74
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.TBitOr expr 
	expr:  expr.TBitAnd expr 
	expr:  expr.TLeftShift expr 
	expr:  expr.TRightShift expr 
	expr:  expr.TGt expr 
	expr:  expr.TLt expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Dot expr 
	expr:  expr.TAdd expr 
	expr:  expr.TSub expr 
	expr:  expr.TMul expr 
	expr:  expr.TDiv expr 
	expr:  expr.TMod expr 
	expr:  expr.TPow expr 
	expr:  expr.TDotLParen type_expr TRParen 
	prefixexp:  TLParen expr.TRParen 

	TAnd  shift 78
	TOr  shift 77
	TEqeq  shift 87
	TNeq  shift 88
	TLte  shift 86
	TGte  shift 85
	T2Dot  shift 89
	TRParen  shift 138
	TAdd  shift 90
	TSub  shift 91
	TMul  shift 92
	TDiv  shift 93
	TMod  shift 94
	TPow  shift 95
	TLeftShift  shift 81
	TRightShift  shift 82
	TBitAnd  shift 80
	TBitOr  shift 79
	TDotLParen  shift 96
	TGt  shift 83
	TLt  shift 84
	.  error


75: shift/reduce conflict (shift 139(0), red'n 97(0)) on TRParen
state 75
	prefixexp:  functioncall.    (97)
	afunctioncall:  TLParen functioncall.TRParen 

	TRParen  shift 139
	.  reduce 97 (src line 513)


state 76
	exprlist:  exprlist TComma.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 140
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 77
	expr:  expr TOr.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 141
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 78
	expr:  expr TAnd.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 142
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 79
	expr:  expr TBitOr.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 143
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 80
	expr:  expr TBitAnd.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 144
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 81
	expr:  expr TLeftShift.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 145
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 82
	expr:  expr TRightShift.expr 

	TFalse  shift 29
	TFunction  shift 40
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Dot  shift 32
	TIdent  shift 20
	TNumber  shift 31
	TString  shift 42
	TLBrace  shift 43
	TLParen  shift 24
	TSub  shift 37
	THash  shift 39
	.  error

	var  goto 41
	expr  goto 146
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 21
	function  goto 33
	tableconstructor  goto 36

state 83
	expr:  expr TGt.expr 
